--- a/src/scss/issues-wrapper.scss
+++ b/src/scss/issues-wrapper.scss
@@ -9,6 +9,7 @@
   background-color: rgba(0,0,0,0.4);
   .container {
     background-color: white;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.4);
     padding: 15px;
     min-height: 100vh;
     margin-top: 30px;
@@ -25,11 +26,11 @@
 }
 
 .issues-wrapper-open {
-  transition: 1s;
+  transition: 0.8s ease-in-out;
   transform: translateY(0%);
 }
 
 .issues-wrapper-close {
-  transition: 1s;
+  transition: 0.8s;
   transform: translateY(100%);
 }
