--- a/src/scss/issues-wrapper.scss
+++ b/src/scss/issues-wrapper.scss
@@ -7,6 +7,7 @@
   left: 0;
   right: 0;
   background-color: rgba(0,0,0,0.4);
+  z-index: 9999;
   .container {
     background-color: white;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.4);
