--- a/src/scss/application.scss
+++ b/src/scss/application.scss
@@ -2,3 +2,5 @@
 @import './issues-wrapper.scss';
 @import './layout.scss';
 @import './loading.scss';
+@import './flex.scss';
+@import './main-top-menu.scss';
