--- a/src/scss/issues-wrapper.scss
+++ b/src/scss/issues-wrapper.scss
@@ -1,17 +1,18 @@
 .issues-wrapper {
   transform: translateY(100%);
   position: fixed;
-  height: 100vh;
+  min-height: 100vh;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
+  overflow: auto;
   background-color: rgba(0,0,0,0.4);
   z-index: 9999;
   .container {
     background-color: white;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.4);
-    padding: 15px;
+    padding: 4rem;
     min-height: 100vh;
     margin-top: 30px;
     position: relative;
@@ -23,6 +24,25 @@
     right: 0;
     margin-top: 15px;
     margin-right: 15px;
+  }
+
+  .issue-container {
+    text-align: left !important;
+    height: inherit !important;
+    min-width: 100% !important;
+    margin-bottom: 15px !important;
+  }
+
+  .issue-title {
+    color: rgba(0, 0, 0, 0.870588);
+    font-size: 16px;
+  }
+
+  .issue-body {
+    color: rgba(0, 0, 0, 0.541176);
+    font-size: 14px;
+    white-space: pre-line;
+    line-height: 20px;
   }
 }
 
